--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PORT }}
+          port: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
           script: cd ${{ secrets.PROJECT_PATH }} && git pull && npm install && node app.js &
 
