--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,30 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Push to server
+      - name: Download the new version
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           KEY: ${{ secrets.SSHKEY }}
-          script: cd ${{ secrets.PROJECT_PATH }} && git pull && npm install && pm2 start app.js
+          script: cd ${{ secrets.PROJECT_PATH }} && git pull
+          
+      - name: Install the new version
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
+          script: cd ${{ secrets.PROJECT_PATH }} && npm install && pm2 start app.js
+          
+      - name: Starting node app
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
+          script: cd ${{ secrets.PROJECT_PATH }} && pm2 start app.js
 
