--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           KEY: ${{ secrets.SSHKEY }}
-          script: cd ${{ secrets.PROJECT_PATH }} && npm install && pm2 start app.js
+          script: cd ${{ secrets.PROJECT_PATH }} && npm install && pm2 -f start app.js
           
       - name: Starting node app
         uses: appleboy/ssh-action@master
